--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     "autoload": {
         "psr-0": {
             "Net\\Bazzline\\Component\\Heartbeat\\": "source/",
-            "Test\\Net\\Bazzline\\Component\\Heartbeat\\": "test/",
-            "Example\\": "example/"
+            "Test\\Net\\Bazzline\\Component\\Heartbeat\\": "test/"
         }
     }
 }
