--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "mockery/mockery": "dev-master"
+        "mockery/mockery": "dev-master",
+        "net_bazzline/component_process_identity": "1.0.0"
     },
     "autoload": {
         "psr-0": {
