--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
         "mockery/mockery": "dev-master",
-        "net_bazzline/component_process_identity": "1.0.0"
+        "net_bazzline/component_process_identity": "1.0.0",
+        "net_bazzline/component_utility": "dev-master"
     },
     "autoload": {
         "psr-0": {
