--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "psr-0": {
             "Net\\Bazzline\\Component\\Heartbeat\\": "source/",
             "Test\\Net\\Bazzline\\Component\\Heartbeat\\": "test/",
-            "Example\\": "example/"
+            "Example\\": "examples/"
         }
     }
 }
