moved test to tests

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "autoload": {
         "psr-0": {
             "Net\\Bazzline\\Component\\Heartbeat\\": "source/",
-            "Test\\Net\\Bazzline\\Component\\Heartbeat\\": "test/",
+            "Test\\Net\\Bazzline\\Component\\Heartbeat\\": "tests/",
             "Example\\": "examples/"
         }
     }
